# rosetta_drone

./: .gitignore  .gitmodules  LICENSE  README.md  bag.sh  environment.yml  requirements.txt
UI/: CMakeLists.txt  README.md  package.xml
UI/include/UI/: flightmare_wrapper_UI.hpp
UI/launch/: dji_ui.launch  flightmare_ui.launch  ui.launch
UI/src/: flightmare_wrapper_UI.cpp  flightmare_wrapper_UI_node.cpp
control_sim/: CMakeLists.txt  README.md  package.xml
control_sim/include/: mid_to_sim_include.h
control_sim/launch/: rotors_gazebo_controller.launch
control_sim/src/: print_publisher.cpp  simulator_direct.cpp  temp_publisher.cpp
custom_control/: CMakeLists.txt  README.md  package.xml
custom_control/include/custom_control/: flight_pilot_custom.hpp
custom_control/launch/: rotors_gazebo_custom.launch
custom_control/src/: flight_pilot_custom.cpp  flight_pilot_node_custom.cpp
dji_wrapper/: CMakeLists.txt  README.md  package.xml
dji_wrapper/include/dji_wrapper/: dji_wrapper.hpp
dji_wrapper/launch/: controller_visualization.launch  dji_visualization.launch  m300.rviz
dji_wrapper/scripts/: controller_publisher_node.py  transform_publisher_node.py
dji_wrapper/src/: dji_wrapper.cpp  dji_wrapper_node.cpp
dji_wrapper/urdf/: controller.xacro  m300.xacro
flightmare_wrapper/: CMakeLists.txt  README.md  package.xml
flightmare_wrapper/include/flightmare_wrapper/: flightmare_wrapper.hpp  flightmare_wrapper_UI.hpp
flightmare_wrapper/launch/: sim_classes.launch  unity_flightmare_wrapper.launch
flightmare_wrapper/src/: UI.cpp  flightmare_wrapper.cpp  flightmare_wrapper_UI.cpp  flightmare_wrapper_node.cpp  sim_classes.cpp
gimbal_test/: CMakeLists.txt  README.md  package.xml
gimbal_test/launch/: dji_vehicle_node_custom.launch
gimbal_test/src/: gimbal_movement_test_node.cpp
image_processing/: CMakeLists.txt  README.md  package.xml
image_processing/include/image_processing/: paper_commander.hpp  paper_finder.hpp
image_processing/scripts/: image_processing_python_test_node.py
image_processing/src/: image_converter.cpp  image_processing_test_node.cpp  paper_commander.cpp  paper_commander_node.cpp  paper_finder.cpp  paper_finder_node.cpp
image_processing/srv/: FindPaperArea.srv
live_saliency/: CMakeLists.txt  package.xml
live_saliency/launch/: saliency_viewer.launch
live_saliency/src/: live_saliency_node.py
rnn_control/: package.xml
rnn_control/launch/: camera_30hz_node.launch  control_logging_node.launch  control_logging_node_nolog.launch  gimbal_centerer.launch  saliency_control_node.launch
rnn_control/launch/network_launch/: BBC_demo.launch  control_logging_node_all.launch  control_logging_node_bidirect_train.launch  control_logging_node_bidirect_val.launch  control_logging_node_cfc.launch  control_logging_node_cfc_train.launch  control_logging_node_cfc_val.launch  control_logging_node_ctgru_train.launch  control_logging_node_ctgru_val.launch  control_logging_node_ctrnn_val.launch  control_logging_node_fine.launch  control_logging_node_fine_train.launch  control_logging_node_fine_val.launch  control_logging_node_grud_train.launch  control_logging_node_grud_val.launch  control_logging_node_gruode_train.launch  control_logging_node_gruode_val.launch  control_logging_node_hawk_train.launch  control_logging_node_hawk_val.launch  control_logging_node_lstm.launch  control_logging_node_lstm_train.launch  control_logging_node_lstm_val.launch  control_logging_node_mixedcfc.launch  control_logging_node_mixedcfc_train.launch  control_logging_node_mixedcfc_val.launch  control_logging_node_mmrnn_train.launch  control_logging_node_mmrnn_val.launch  control_logging_node_ncp.launch  control_logging_node_ncp_old.launch  control_logging_node_ncp_train.launch  control_logging_node_ncp_val.launch  control_logging_node_node_val.launch  control_logging_node_old_cfc.launch  control_logging_node_phased_train.launch  control_logging_node_phased_val.launch  control_logging_node_tcn_train.launch  control_logging_node_tcn_val.launch  control_logging_node_train.launch  control_logging_node_val.launch  control_logging_node_vanilla_train.launch  (+5 more)
rnn_control/src/: BBC_demo_node.py  camera_emulator_node.py  control_utils.py  csv_writer.py  gimbal_centerer.py  guardian_node.py  hiking_control_node.py  live_saliency_node.py  logger_node.py  rnn_control_node.py  saliency_control_node.py  tf_cfc.py  truncate_weights.py
rnn_control/src/models/: lstm1.hdf5  ncpold.hdf5  rev-0_model-ncp_seq-64_opt-adam_lr-0.000800_crop-0.000000_epoch-049_val_loss:0.2528_mse:0.2151_2021:11:10:19:28:04.hdf5
rnn_control/src/models/all_types_train/: params.json  rev-0_model-lstm_seq-64_opt-adam_lr-0.000290_crop-0.000000_epoch-099_val_loss:0.2384_mse:0.0238_2022:02:04:09:50:39.hdf5  rev-0_model-ncp_seq-64_opt-adam_lr-0.000291_crop-0.000000_epoch-099_val_loss:0.2465_mse:0.0590_2022:02:09:12:22:53.hdf5
rnn_control/src/models/all_types_val/: params.json  rev-0_model-lstm_seq-64_opt-adam_lr-0.000290_crop-0.000000_epoch-034_val_loss:0.1939_mse:0.0814_2022:02:03:18:31:52.hdf5  rev-0_model-ncp_seq-64_opt-adam_lr-0.000291_crop-0.000000_epoch-028_val_loss:0.2109_mse:0.1213_2022:02:02:22:20:37.hdf5
rnn_control/src/models/chair2/train/: params.json  (+1 more)
rnn_control/src/models/offline/: ncp.hdf5  params.json
rnn_control/src/models/online_1/: params.json  (+2 more)
rnn_control/src/rev-0_model-ncp_seq-64_opt-adam_lr-0.000900_crop-0.000000_epoch-020_val_loss:0.2127_mse:0.1679_2021:09:20:02:24:31/: saved_model.pb
rnn_control/test/: camera_emulator_node.py  camera_emulator_node_nobridge.py  test_control_node.py  test_rnn_control_cb.py  test_rnn_control_node.py  test_send_vel_cmd.py
rosbagg/: CMakeLists.txt  README.md  package.xml
rosbagg/launch/: rosbag_record.launch
rosbagg/src/: bagall.py  bagend.cpp  bagend.sh  bagstart.cpp  bagstart.sh
video_compression/: CMakeLists.txt  README.md  package.xml
video_compression/launch/: dji_vehicle_node_collection.launch  video_compression_node.launch
video_compression/scripts/: ffio_example.py  logger_example.py  reader.py
video_compression/src/: back_ffio_example.py
(+113 files in other folders)
